# DemoFramework

./: .gitignore  CMakeLists.txt  generate_project.bat
apps/: CMakeLists.txt
apps/skeleton_app/: CMakeLists.txt  skeleton_app.cpp
engine/core/: CMakeLists.txt  engine.cpp  engine.h  event_system.cpp  event_system.h  intmath.h  linear_allocator.cpp  linear_allocator.h  memory.cpp  memory.h  module_export.h  string_hashing.h  system.h  system_enumerator.h  system_manager.cpp  system_manager.h  system_registrar.h  timer_system.cpp  timer_system.h  vector_math.h
engine/platform/: CMakeLists.txt  assert.h  atomics.cpp  atomics.h  base_types.h  file_io.cpp  file_io.h  high_perf_timer.cpp  high_perf_timer.h  log.cpp  log.h  mutex.cpp  mutex.h  platform.cpp  platform.h  semaphore.cpp  semaphore.h  system_events.cpp  system_events.h  thread.cpp  thread.h
engine/render/: CMakeLists.txt  command_buffer.cpp  command_buffer.h  device.cpp  device.h  frame_context.cpp  frame_context.h  gpu_context.h  render_buffer.cpp  render_buffer.h  render_system.cpp  render_system.h  shader_binary.cpp  shader_binary.h  shader_program.cpp  shader_program.h  utils.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
launcher/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp  test_command_buffer.cpp  test_engine.cpp  test_linear_allocator.cpp  test_string_hash.cpp  test_system_manager.cpp
